--- a/app/globals.css
+++ b/app/globals.css
@@ -1,106 +1,26 @@
-/* :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-} */
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-} */
+.container {
+  @apply w-full h-auto grid justify-center border border-solid border-[rgba(0,0,0,0)] lg:block lg:pl-12 xl:pl-24;
+}
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  @apply box-border m-0 p-0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  @apply max-w-[100vw] overflow-x-hidden;
 }
 
 body {
-  background-color: #f7fbfd;
-  width: 100%;
-  transition-property: all;
-  transition-duration: 0.5s;
-  margin: 0 0 0 0;
-  line-height: 1.80857;
-  font-weight: normal;
-  font-size: 14px;
-  color: #070707;
+  @apply w-full transition-all duration-[0.5s] leading-[1.80857] font-[normal] text-sm m-0;
 }
 
 a {
-  text-decoration: none !important;
-  color: #0f0f0f;
-  outline: none !important;
+  @apply outline-none no-underline ;
 }
 
 h1,
@@ -109,48 +29,33 @@ h3,
 h4,
 h5,
 h6 {
-  color: #111111;
-  letter-spacing: 0;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  position: relative;
-  margin: 0;
-  padding: 0px 0px 10px 0px;
+  @apply text-[#111111] tracking-[0] not-italic font-medium leading-[normal] relative m-0 pt-0 pb-2.5 px-0;
 }
 p {
-  font-size: 18px;
-  color: #777a8b;
-  font-style: normal;
+  @apply text-lg text-[#777a8b] not-italic;
 }
 h1 {
-  font-size: 50px;
+  @apply text-[50px];
 }
 h2 {
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 600;
+  @apply text-[40px] not-italic font-semibold;
 }
 h3 {
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 500;
+  @apply text-[25px] not-italic font-medium;
 }
 h4 {
-  font-size: 20px;
+  @apply text-xl;
 }
 h5 {
-  font-size: 18px;
+  @apply text-lg;
 }
 h6 {
-  font-size: 14px;
+  @apply text-sm;
 }
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  @apply box-border;
 }
 h1 a,
 h2 a,
@@ -158,51 +63,28 @@ h3 a,
 h4 a,
 h5 a,
 h6 a {
-  color: #111111;
-  text-decoration: none !important;
-  opacity: 1;
+  @apply no-underline opacity-100;
 }
 .row {
-  display: flex;
-  flex-wrap: wrap;
+  @apply flex flex-wrap;
 }
 /*--End Basic section --*/
 .layout {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+  @apply flex flex-wrap w-full;
 }
-
 .column {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  @apply grid grid-cols-[1fr_1fr] lg:grid-cols-[1fr] ;
   /* gap: 1rem; */
 }
-
-@media only screen and (max-width: 1023px) {
-  .column {
-    grid-template-columns: 1fr;
-  }
-}
 .info {
-  margin-top: 1rem;
-  text-align: center;
+  @apply text-center mt-4;
 }
-
 .error {
-  background-color: var(--dangerRed);
-  padding: 0.6rem 1.2rem;
-  margin-top: 10px;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
+  @apply bg-[color:var(--dangerRed)] flex items-center mt-2.5 px-[1.2rem] py-[0.6rem] rounded-lg;
 }
 li.active {
-  color: #f75023;
+  @apply text-[#f75023];
 }
 .icon {
-  color: rgb(3, 107, 55);
-  text-align: center;
-  width: 100%;
-  font-size: 25px;
+  @apply text-[rgb(3,107,55)] text-center w-full text-[25px];
 }
