--- a/app/styles/ShutterUpButton.module.css
+++ b/app/styles/ShutterUpButton.module.css
@@ -10,12 +10,13 @@
     border: 2px solid #f75023;
     border-radius: 50px;
     text-align: center;
-    padding: 10px 40px;
+    padding: 5px 40px;
     width: 180px;
   }
   .shutterUp span {
     font-size: 16px;
     font-weight: 700;
+    padding: 0;
   }
 .shutterUp::before {
     content: "";
