--- a/app/styles/TopNav.module.css
+++ b/app/styles/TopNav.module.css
@@ -28,8 +28,9 @@
   background-color: #ffffff5e;
   backdrop-filter: blur(10px);
   box-shadow: 1px 1px 5px rgba(8, 3, 3, 0.11);
+  /* @apply bg-[#ffffff5e] backdrop-blur-[10px] shadow-[1px_1px_5px_rgba(8,3,3,0.11)] -top-5; */
 }
-.topMenu ul {
+.ul {
   margin: 0;
   padding: 0 10px;
 }
@@ -58,6 +59,7 @@
 }
 .topMenu li a {
   font-size: 13px;
+  color: #f75023;
 }
 .topMenu li a:hover {
   color: #f75023;
