--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.container {
-  @apply w-full h-auto grid justify-center border border-solid border-[rgba(0,0,0,0)] lg:block lg:pl-12 xl:pl-24;
-}
 
 * {
   @apply box-border m-0 p-0;
@@ -29,7 +26,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply text-[#111111] tracking-[0] not-italic font-medium leading-[normal] relative m-0 pt-0 pb-2.5 px-0;
+  @apply tracking-[0] not-italic font-medium leading-[normal] relative m-0 pt-0 pb-2.5 px-0;
 }
 p {
   @apply text-lg text-[#777a8b] not-italic;
@@ -82,7 +79,7 @@ h6 a {
 .error {
   @apply bg-[color:var(--dangerRed)] flex items-center mt-2.5 px-[1.2rem] py-[0.6rem] rounded-lg;
 }
-li.active {
+.active {
   @apply text-[#f75023];
 }
 .icon {
