--- a/app/styles/Client.module.css
+++ b/app/styles/Client.module.css
@@ -1,28 +1,12 @@
 .container {
-    position: relative;
-    height: 75px;
-    width: 250px;
+  @apply relative h-[75px] w-[250px];
 }
 .container img {
-    position: absolute;
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    left: 0;
-    top: 50%;
-    transform: translate(0, -50%);
+  @apply absolute h-[70px] w-[70px] translate-x-0 -translate-y-2/4 rounded-[50%] left-0 top-2/4;
 }
 .container h5 {
-    position: absolute;
-    left: 90px;
-    top: 35%;
-    transform: translate(0, -50%);
-    color: rgb(34, 32, 32);
+  @apply absolute translate-x-0 -translate-y-2/4 text-[rgb(54,52,52)] left-[90px] top-[35%];
 }
 .container h6 {
-    position: absolute;
-    left: 90px;
-    top: 65%;
-    transform: translate(0, -50%);
-    color: rgb(87, 86, 86);
+  @apply absolute translate-x-0 -translate-y-2/4 text-[rgb(87,86,86)] left-[90px] top-[65%];
 }
