--- a/app/styles/Clients.module.css
+++ b/app/styles/Clients.module.css
@@ -1,36 +1,12 @@
 .comment {
-    width: 430px;
-    display: grid;
-    justify-content: center;
-    height: 300px;
-    position: relative;
+  @apply w-[430px] grid justify-center h-[300px] relative lg:w-[700px] lg:mx-2.5 lg:my-0;
 }
 .icon {
-    text-align: center;
-    width: 100%;
-    font-size: 70px;
-    color: #f75023;
+  @apply text-center w-full text-[70px] text-[#f75023];
 }
 .comment p {
-    width: 430px;
-    text-align: center;
-    font-style: italic;
-    font-weight: 500;
-    padding: 0 20px;
+  @apply w-[430px] text-center italic font-medium px-5 py-0 lg:w-[680px] lg:px-[30px] lg:py-0;
 }
 .auther {
-    height: 75px;
-    display: grid;
-    justify-content: center;
-}
-
-@media (min-width: 1024px) {
-    .comment {
-        width: 700px;
-        margin: 0 10px;
-    }
-    .comment p {
-        padding: 0 30px;
-        width: 680px;
-    }
+  @apply h-[75px] grid justify-center;
 }
