--- a/app/styles/Portfolio.module.css
+++ b/app/styles/Portfolio.module.css
@@ -1,25 +1,11 @@
-.portfolio {
-  width: 380px;
-  padding-bottom: 15px;
-}
 .body {
-  width: 100%;
-  height: 250px;
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 1px 5px 10px rgb(206, 205, 205);
-  display: flex;
-  justify-content: center;
+  @apply w-[380px] h-[250px] overflow-hidden
+  shadow-[1px_5px_10px_rgb(206,205,205)]
+  dark:shadow-[1px_5px_10px_rgb(26,25,25)]
+  flex justify-center rounded-[10px];
 }
 .body img {
-  width: 600px;
-  height: 250px;
-  object-fit: fill;
-  transition: 1s linear;
-  cursor: pointer;
-  opacity: 0.9;
-}
-.body img:hover {
-  margin-left: -40px;
-  opacity: 1;
+  @apply w-[450px] h-[250px] overflow-hidden
+  transition-[1s] ease-linear duration-1000 cursor-pointer opacity-90
+  hover:opacity-100 hover:-ml-10;
 }
