--- a/app/styles/Portfolio.module.css
+++ b/app/styles/Portfolio.module.css
@@ -7,5 +7,6 @@
 .body img {
   @apply w-[450px] h-[250px] overflow-hidden
   transition-[1s] ease-linear duration-1000 cursor-pointer opacity-90
-  hover:opacity-100 hover:-ml-10;
+  hover:opacity-100 hover:scale-110;
+  /* hover:-ml-10; */
 }
