--- a/app/styles/App.css
+++ b/app/styles/App.css
@@ -3,27 +3,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
 * {
-  box-sizing: border-box !important;
+  @apply box-border;
   /* transition: all 0.5s ease; */
 }
-
 body {
-  background-color: #f7fbfd;
-  width: 100%;
-  transition-property: all;
-  transition-duration: 0.5s;
-  margin: -2rem 0 0 0;
-  line-height: 1.80857;
-  font-weight: normal;
-  font-size: 14px;
-  color: #070707;
-  overflow-x: hidden;
+  @apply bg-[#f7fbfd] w-full transition-all duration-[0.5s] mt-[-2rem] leading-[1.80857] font-[normal] text-sm text-[#070707] overflow-x-hidden mb-0 mx-0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 a {
-  text-decoration: none !important;
-  color: #0f0f0f;
+  @apply no-underline text-[#0f0f0f];
   outline: none !important;
 }
 h1,
@@ -32,48 +21,33 @@ h3,
 h4,
 h5,
 h6 {
-  color: #111111;
-  letter-spacing: 0;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  position: relative;
-  margin: 0;
-  padding: 0px 0px 10px 0px;
+  @apply text-[#111111] tracking-[0] not-italic font-medium leading-[normal] relative m-0 pt-0 pb-2.5 px-0;
 }
 p {
-  font-size: 18px;
-  color: #777a8b;
-  font-style: normal;
+  @apply text-lg text-[#777a8b] not-italic;
 }
 h1 {
-  font-size: 50px;
+  @apply text-[50px];
 }
 h2 {
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 600;
+  @apply text-[40px] not-italic font-semibold;
 }
 h3 {
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 500;
+  @apply text-[25px] not-italic font-medium;
 }
 h4 {
-  font-size: 20px;
+  @apply text-xl;
 }
 h5 {
-  font-size: 18px;
+  @apply text-lg;
 }
 h6 {
-  font-size: 14px;
+  @apply text-sm;
 }
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+  @apply box-border;
 }
 h1 a,
 h2 a,
@@ -81,51 +55,33 @@ h3 a,
 h4 a,
 h5 a,
 h6 a {
-  color: #111111;
-  text-decoration: none !important;
-  opacity: 1;
+  @apply text-[#111111] no-underline opacity-100;
 }
 .row {
-  display: flex;
-  flex-wrap: wrap;
+  @apply flex flex-wrap;
 }
 /*--End Basic section --*/
 .layout {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
+  @apply flex flex-wrap w-full;
 }
-
 .column {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  @apply grid grid-cols-[1fr_1fr];
   /* gap: 1rem; */
 }
-
 @media only screen and (max-width: 1023px) {
   .column {
-    grid-template-columns: 1fr;
+    @apply grid-cols-[1fr];
   }
 }
 .info {
-  margin-top: 1rem;
-  text-align: center;
+  @apply text-center mt-4;
 }
-
 .error {
-  background-color: var(--dangerRed);
-  padding: 0.6rem 1.2rem;
-  margin-top: 10px;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
+  @apply bg-[color:var(--dangerRed)] flex items-center mt-2.5 px-[1.2rem] py-[0.6rem] rounded-lg;
 }
 li.active {
-  color: #f75023;
+  @apply text-[#f75023];
 }
 .icon {
-  color: rgb(3, 107, 55);
-  text-align: center;
-  width: 100%;
-  font-size: 25px;
+  @apply text-[rgb(3,107,55)] text-center w-full text-[25px];
 }
